--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,15 +15,6 @@
    "metadata": {},
    "source": [
     "### 1. How likely is it that you roll doubles when rolling two dice?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# rolling "
    ]
   },
   {
@@ -43,7 +34,62 @@
     }
    ],
    "source": [
-    "1/ 36 "
+    "(1/6) * (1/6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.92831554, 0.86968588],\n",
+       "       [0.46813415, 0.65346783],\n",
+       "       [0.45761913, 0.37654263],\n",
+       "       ...,\n",
+       "       [0.85337479, 0.66526233],\n",
+       "       [0.38222348, 0.79138079],\n",
+       "       [0.14183519, 0.7010062 ]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "snake_eyes = 0.03\n",
+    "double = np.random.random((100000,2))\n",
+    "double\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False, False],\n",
+       "       [False, False],\n",
+       "       [False, False],\n",
+       "       ...,\n",
+       "       [False, False],\n",
+       "       [False, False],\n",
+       "       [False, False]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "double_eyes = double < snake_eyes\n",
+    "double_eyes"
    ]
   },
   {
@@ -55,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +110,7 @@
        "0.1875"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,125 +123,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.80391909, 0.46872524],\n",
-       "       [0.74995667, 0.0745744 ],\n",
-       "       [0.14744663, 0.70660873],\n",
-       "       [0.41316469, 0.07170945],\n",
-       "       [0.6028243 , 0.35529988],\n",
-       "       [0.86942581, 0.03853796],\n",
-       "       [0.88585224, 0.70635403],\n",
-       "       [0.65127449, 0.32453128],\n",
-       "       [0.55519717, 0.30503529],\n",
-       "       [0.3629507 , 0.96225093],\n",
-       "       [0.45863181, 0.29047911],\n",
-       "       [0.48133786, 0.10941424],\n",
-       "       [0.28175339, 0.30618843],\n",
-       "       [0.10351444, 0.09502604],\n",
-       "       [0.68701824, 0.11598702],\n",
-       "       [0.0574106 , 0.97644476],\n",
-       "       [0.19251241, 0.498926  ],\n",
-       "       [0.12542207, 0.76847544],\n",
-       "       [0.3803266 , 0.26793126],\n",
-       "       [0.7156328 , 0.27346912],\n",
-       "       [0.49297471, 0.52361962],\n",
-       "       [0.45895813, 0.96055269],\n",
-       "       [0.98969133, 0.08426878],\n",
-       "       [0.042694  , 0.24219399],\n",
-       "       [0.68508771, 0.36725647],\n",
-       "       [0.31902829, 0.33322644],\n",
-       "       [0.51608144, 0.84351775],\n",
-       "       [0.35139738, 0.11154765],\n",
-       "       [0.5554793 , 0.15300477],\n",
-       "       [0.46470086, 0.0698888 ],\n",
-       "       [0.81492253, 0.28080093],\n",
-       "       [0.32814418, 0.70057013],\n",
-       "       [0.88373223, 0.38322417],\n",
-       "       [0.68401752, 0.4334572 ],\n",
-       "       [0.17510379, 0.69330767],\n",
-       "       [0.98104799, 0.02875552],\n",
-       "       [0.98309852, 0.36256105],\n",
-       "       [0.6362888 , 0.00712108],\n",
-       "       [0.27677779, 0.71274811],\n",
-       "       [0.03575158, 0.6565941 ],\n",
-       "       [0.24454612, 0.80906012],\n",
-       "       [0.67435168, 0.08261256],\n",
-       "       [0.65426896, 0.72208078],\n",
-       "       [0.17960806, 0.01077923],\n",
-       "       [0.10186176, 0.11071567],\n",
-       "       [0.62983691, 0.89422891],\n",
-       "       [0.2269624 , 0.96128017],\n",
-       "       [0.69928206, 0.51137212],\n",
-       "       [0.24740688, 0.48663438],\n",
-       "       [0.37176719, 0.91456378],\n",
-       "       [0.12079122, 0.29815637],\n",
-       "       [0.5333453 , 0.44056701],\n",
-       "       [0.65229964, 0.22338129],\n",
-       "       [0.07938923, 0.55834473],\n",
-       "       [0.23337172, 0.76832883],\n",
-       "       [0.89658453, 0.5341415 ],\n",
-       "       [0.24288543, 0.16709221],\n",
-       "       [0.64872826, 0.83666581],\n",
-       "       [0.48454753, 0.90508839],\n",
-       "       [0.69821834, 0.39621152],\n",
-       "       [0.39082883, 0.42776203],\n",
-       "       [0.07792822, 0.05944768],\n",
-       "       [0.46099001, 0.062252  ],\n",
-       "       [0.6538009 , 0.7992389 ],\n",
-       "       [0.73447018, 0.16723895],\n",
-       "       [0.31806761, 0.63332117],\n",
-       "       [0.96735918, 0.2379679 ],\n",
-       "       [0.04110527, 0.41587142],\n",
-       "       [0.62263431, 0.15609356],\n",
-       "       [0.58612512, 0.61273027],\n",
-       "       [0.96906853, 0.00269242],\n",
-       "       [0.37603027, 0.34699117],\n",
-       "       [0.22651601, 0.61644835],\n",
-       "       [0.2446025 , 0.31560821],\n",
-       "       [0.76039593, 0.12411539],\n",
-       "       [0.43892827, 0.03426215],\n",
-       "       [0.87971698, 0.11941069],\n",
-       "       [0.57393134, 0.64381452],\n",
-       "       [0.03558365, 0.79106347],\n",
-       "       [0.57110837, 0.174086  ],\n",
-       "       [0.17499885, 0.22666666],\n",
-       "       [0.21991312, 0.96697891],\n",
-       "       [0.05348763, 0.43660472],\n",
-       "       [0.28536623, 0.95000893],\n",
-       "       [0.01263953, 0.93100508],\n",
-       "       [0.74972399, 0.04482518],\n",
-       "       [0.0698613 , 0.65009617],\n",
-       "       [0.32914665, 0.6904321 ],\n",
-       "       [0.52883502, 0.72827886],\n",
-       "       [0.31447475, 0.19846676],\n",
-       "       [0.67104171, 0.12328896],\n",
-       "       [0.20055691, 0.9310102 ],\n",
-       "       [0.41308184, 0.33547897],\n",
-       "       [0.75405623, 0.45764386],\n",
-       "       [0.18828657, 0.70600146],\n",
-       "       [0.18862172, 0.23000129],\n",
-       "       [0.37051297, 0.03138426],\n",
-       "       [0.85296818, 0.16862744],\n",
-       "       [0.3236612 , 0.85600192],\n",
-       "       [0.51823698, 0.97238803]])"
+       "array([['T', 'T', 'H', ..., 'H', 'T', 'T'],\n",
+       "       ['H', 'T', 'H', ..., 'H', 'H', 'H'],\n",
+       "       ['H', 'T', 'T', ..., 'H', 'T', 'H'],\n",
+       "       ...,\n",
+       "       ['H', 'H', 'T', ..., 'T', 'T', 'H'],\n",
+       "       ['T', 'T', 'T', ..., 'H', 'H', 'H'],\n",
+       "       ['H', 'H', 'H', ..., 'T', 'T', 'T']], dtype='<U1')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "flips = 8 \n",
-    "head_prob = .19\n",
-    "rows = 0\n",
-    "head_count = np.random.random((100, 2))\n",
+    "coin = ['H', 'T']\n",
+    "head_count = np.random.choice(coin, (100000, flips))\n",
     "head_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True, False, False, ..., False,  True, False])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((head_count == 'H').sum(axis=1) == 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.22208"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((head_count == 'H').sum(axis=1) == 3).sum() / 100000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.63557"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((head_count == 'H').sum(axis=1) > 3).sum() / 100000"
    ]
   },
   {
@@ -206,10 +225,125 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.24606703, 0.25647147],\n",
+       "       [0.28028412, 0.71092986],\n",
+       "       [0.69009581, 0.01507407],\n",
+       "       ...,\n",
+       "       [0.83459819, 0.57516006],\n",
+       "       [0.07633783, 0.50942477],\n",
+       "       [0.76309694, 0.78092573]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "webdev = .75\n",
+    "ds = .25\n",
+    "\n",
+    "billboard = np.random.random((1000, 2))\n",
+    "billboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "databoard = billboard < ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.073"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(databoard.sum(axis=1) == 2).mean()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 4. Codeup students buy, on average, 3 poptart packages with a standard deviation of 1.5 a day from the snack vending machine. If on monday the machine is restocked with 17 poptart packages, how likely is it that I will be able to buy some poptarts on Friday afternoon? (Remember, if you have mean and standard deviation, use the np.random.normal) You'll need to make a judgement call on how to handle some of your values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "61.3"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "avgpop = 3\n",
+    "stdpop = 1.5\n",
+    "weekpop = 17\n",
+    "pop = np.random.normal(avgpop,stdpop, (10000,5))\n",
+    "pop\n",
+    "\n",
+    "\n",
+    "(pop.sum(axis=1) <= 16).mean() * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11.969223989487427"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# creating a for loop that would append popleft - i to a new array/list\n",
+    "\n",
+    "def popcount(pop):\n",
+    "    for i in pop:\n",
+    "        popleft = 17\n",
+    "        popleft -= i\n",
+    "        z = i.sum()\n",
+    "    return(z)\n",
+    "\n",
+    "popcount(pop)"
    ]
   },
   {
@@ -219,9 +353,80 @@
     "### 5. Compare Heights\n",
     "\n",
     "- Men have an average height of 178 cm and standard deviation of 8cm.\n",
-    "- Women have a mean of 170, sd = 6cm.\n",
+    "- Women have a mean of 170, standard deviation of 6cm.\n",
     "- Since you have means and standard deviations, you can use np.random.normal to generate observations.\n",
     "- If a man and woman are chosen at random, what is the likelihood the woman is taller than the man?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([174.76721313, 170.19880646, 174.96000221, ..., 175.60964483,\n",
+       "       164.05618397, 156.20135522])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "men_mean = 178\n",
+    "men_std = 8\n",
+    "women_mean = 170\n",
+    "women_std = 6\n",
+    "\n",
+    "men = np.random.normal(men_mean,men_std,100000)\n",
+    "men\n",
+    "women = np.random.normal(women_mean,women_std,100000)\n",
+    "women"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True, False,  True, ...,  True, False, False])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comparison = (men < women)\n",
+    "comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21.387"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compare_sum = (comparison == True).sum()\n",
+    "compare_sum / len(men) * 100"
    ]
   },
   {
@@ -236,6 +441,54 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.12117"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fail_chance = .004\n",
+    "download = np.random.random((100000,150))\n",
+    "\n",
+    "fail = (download < fail_chance)\n",
+    "(fail.sum(axis=1) > 1).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.53844"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fail_chance = .004\n",
+    "download = np.random.random((100000,450))\n",
+    "\n",
+    "fail = (download < fail_chance)\n",
+    "(fail.sum(axis=1) > 1).mean()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -244,16 +497,164 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.67"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "- If 23 people are in the same room, what are the odds that two of them share a birthday? What if it's 20 people? 40?"
+    "truck_chance = .7\n",
+    "\n",
+    "day_chance = np.random.random((10000,3))\n",
+    "\n",
+    "truck = (day_chance < truck_chance)\n",
+    "truck\n",
+    "(truck.sum(axis=1) < True).mean() * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "96.81"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "week_chance = np.random.random((10000,5))\n",
+    "truck = (week_chance < truck_chance)\n",
+    "(truck.sum(axis=1) > True).mean() * 100"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 8. If 23 people are in the same room, what are the odds that two of them share a birthday? What if it's 20 people? 40?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[341, 282, 346, ..., 104, 178, 225],\n",
+       "       [142,  89, 268, ..., 144,  56, 117],\n",
+       "       [ 23, 189, 134, ..., 272,  98,  25],\n",
+       "       ...,\n",
+       "       [ 62,  88, 270, ...,  21, 163, 242],\n",
+       "       [308,  55, 143, ..., 280, 332,  46],\n",
+       "       [322, 312, 225, ..., 185, 278, 303]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "n_trials = ncols = 23\n",
+    "n_simulations = nrows = 100_000\n",
+    "\n",
+    "# Create matrix\n",
+    "birthday = np.random.choice(range(365),size=(n_simulations, n_trials))\n",
+    "birthday"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.50943"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "birthday_df = pd.DataFrame(birthday)\n",
+    "(birthday_df.nunique(axis=1) < n_trials).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.41327"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# For 20 people:\n",
+    "n_trials = ncols = 20\n",
+    "\n",
+    "# Create matrix\n",
+    "birthday = np.random.choice(range(365),size=(n_simulations, n_trials))\n",
+    "birthday_df = pd.DataFrame(birthday)\n",
+    "(birthday_df.nunique(axis=1) < n_trials).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.89097"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# For 40 people:\n",
+    "n_trials = ncols = 40\n",
+    "\n",
+    "# Create matrix\n",
+    "birthday = np.random.choice(range(365),size=(n_simulations, n_trials))\n",
+    "birthday_df = pd.DataFrame(birthday)\n",
+    "(birthday_df.nunique(axis=1) < n_trials).mean()"
+   ]
   }
  ],
  "metadata": {
