changes hypoth test

--- a/hypothesis_testing.ipynb
+++ b/hypothesis_testing.ipynb
@@ -892,10 +892,100 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Comparison of Means"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Answer with the type of test you would use (assume normal distribution):\n",
+    "\n",
+    "- Is there a difference in grades of students on the second floor compared to grades of all students?\\\n",
+    "    - Discrete & Continious // t-test 1 sample, 2 tailed\n",
+    "- Are adults who drink milk taller than adults who don't drink milk?\n",
+    "    - Discrete & Continious // t-test 1 sample, 2 tailed\n",
+    "- Is the price of gas higher in Texas or in New Mexico?\n",
+    "    - Discrete & Continious // t-test 2 sample, 2 tailed\n",
+    "- Are there differences in stress levels between students who take data science vs students who take web development vs students who take cloud academy?\n",
+    "    - Discrete & Continious // t-test 2 sample, 1 tailed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Ace Realty wants to determine whether the average time it takes to sell homes is different for its two offices. A sample of 40 sales from office #1 revealed a mean of 90 days and a standard deviation of 15 days. A sample of 50 sales from office #2 revealed a mean of 100 days and a standard deviation of 20 days. Use a .05 level of significance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$H_0$: Office 1 on average sells more houses than Office 2.\\\n",
+    "$H_a$: Office 1 does not sell more houses on average than Office 2."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "off1 = 90\n",
+    "off1_std = 15\n",
+    "off2 = 100\n",
+    "off2_std = 20\n",
+    "a = .05"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/Caskroom/miniforge/base/envs/codeup/lib/python3.11/site-packages/scipy/stats/_stats_py.py:7030: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  svar = ((n1 - 1) * v1 + (n2 - 1) * v2) / df\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 220,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t, p = stats.ttest_ind(off1, off2)\n",
+    "\n",
+    "p/2 < a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Load the mpg dataset and use it to answer the following questions:\n",
+    "\n",
+    "- Is there a difference in fuel-efficiency in cars from 2008 vs 1999?\n",
+    "- Are compact cars more fuel-efficient than the average car?\n",
+    "- Do manual cars get better gas mileage than automatic cars?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
